[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'tox-asdf-redux'
version = '0.1.0'
description = 'A tox plugin using asdf to find Python executables'
license = 'MIT'
authors = ['Scott Sharkey <ssharkey@lanshark.com>']
readme = 'README.md'
homepage = 'https://github.com/lanshark/tox-asdf-redux'
repository = 'https://github.com/lanshark/tox-asdf-redux'
keywords = ['tox', 'asdf']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Framework :: tox',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities',
]
packages = [{include = '_tox_asdf_redux', from = 'src'}]

[tool.poetry.plugins.tox]
asdf-redux = '_tox_asdf_redux.plugin'

[tool.poetry.dependencies]
python = '^3.7'
tox = '*'
asdf-inspect = '~0.1'

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
known_first_party = ['_tox_asdf_redux']
known_third_party = ['asdf_inspect']

[tool.pytest.ini_options]
minversion = '7.0'
testpaths = ['tests']

[tool.tox]
legacy_tox_ini = '''
[tox]
envlist =
    py37
    py38
    py39
    py310
    py311
    flake8
    isort
isolated_build = true

[testenv]
deps =
    pytest
commands = pytest {posargs}

[testenv:flake8]
skip_install = true
deps = flake8
commands = flake8 {posargs}

[testenv:isort]
skip_install = true
deps = isort
commands = isort {posargs:. -c}
'''
